Fix task validation, solve the name issue, and design of the card should have a nowrap property inside the title tag

--- a/src/views/TaskViewBoard/Read/Card/taskCard.css
+++ b/src/views/TaskViewBoard/Read/Card/taskCard.css
@@ -2,6 +2,7 @@
   border-radius: 20px;
   padding: 10px;
   margin: 0;
+  overflow: hidden;
 }
 
 .task-card-header-done {
